; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/cdfs/extr_cdfs.c_cdfs_open_track.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/cdfs/extr_cdfs.c_cdfs_open_track.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdfs_track_t = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"cue\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cdfs_track_t* @cdfs_open_track(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.cdfs_track_t*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* null, i32** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i8* @path_get_extension(i8* %8)
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @string_is_equal_noncase(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call %struct.cdfs_track_t* @cdfs_open_cue_track(i8* %14, i32 %15)
  store %struct.cdfs_track_t* %16, %struct.cdfs_track_t** %3, align 8
  br label %18

17:                                               ; preds = %2
  store %struct.cdfs_track_t* null, %struct.cdfs_track_t** %3, align 8
  br label %18

18:                                               ; preds = %17, %13
  %19 = load %struct.cdfs_track_t*, %struct.cdfs_track_t** %3, align 8
  ret %struct.cdfs_track_t* %19
}

declare dso_local i8* @path_get_extension(i8*) #1

declare dso_local i64 @string_is_equal_noncase(i8*, i8*) #1

declare dso_local %struct.cdfs_track_t* @cdfs_open_cue_track(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
